--- a/sass/adaptive-sass/components/studio/_backdrop.scss
+++ b/sass/adaptive-sass/components/studio/_backdrop.scss
@@ -59,6 +59,7 @@
 
 .modal__title {
   display: block;
+  text-align: center;
 
   @media screen and (max-width: 479.98px) {
     margin-bottom: 20px;
