--- a/sass/adaptive-sass/components/studio/_footer-form.scss
+++ b/sass/adaptive-sass/components/studio/_footer-form.scss
@@ -1,4 +1,4 @@
-// Форма в футере
+
 
 .footer__form {
   font-weight: 700;
@@ -16,6 +16,7 @@
     flex-wrap: wrap;
     width: 570px;
     margin-left: 93px;
+    margin-top: 0px;
   }
 }
 
