--- a/sass/adaptive-sass/components/studio/_second-section.scss
+++ b/sass/adaptive-sass/components/studio/_second-section.scss
@@ -1,9 +1,9 @@
-// Вторая секция
+
 
 .section-second {
   padding-bottom: 94px;
 
-  // Конкретно на 1199px видно баг
+  
   @media screen and (max-width: 1199.98px) {
     display: none;
   }
@@ -11,7 +11,18 @@
 
 .section-second__title {
   @extend %section-title;
-}
+    @media screen and (min-width: 1200px) {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 42px;
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin-bottom: 50px;
+      }
+    }
+
 
 
 .section-second__services {
