--- a/sass/adaptive-sass/components/studio/_third-section.scss
+++ b/sass/adaptive-sass/components/studio/_third-section.scss
@@ -1,4 +1,3 @@
-// Третья секция
 
 .section-third {
   padding-top: 60px;
@@ -41,6 +40,18 @@
 
 .section-third__title {
   @extend %section-title;
+}
+.section-third__title {
+  @media screen and (min-width: 1200px) {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
 }
 
 .employee {
